# tsu

./: .gitignore  setup.py  setup_dist.py
data/magic_mount/: CMakeLists.txt  build.sh
data/magic_mount/core/: bootstages.cpp
data/magic_mount/utils/: logging.cpp  selinux.cpp
data/magic_mount/utils/include/: defs.h
features/: check_su.feature
scripts/: inlint.py  su_roots.sh
tests/: test_env_var.py
tsu/: consts.py  env_map.py  execve.py  main.py  su_apps.py  su_binary.py  su_defs.py  tsu  user_utils.py
tsudo/: daemon.py
